{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 21,
  "lineage": "333094ab-0b03-a46c-ae93-ead57c115b0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:internet-gateway/igw-0edaca5eb7861502b",
            "id": "igw-0edaca5eb7861502b",
            "owner_id": "134524836832",
            "tags": {
              "Name": "dove-IGW"
            },
            "tags_all": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:route-table/rtb-043883711aba943a2",
            "id": "rtb-043883711aba943a2",
            "owner_id": "134524836832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edaca5eb7861502b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dove-pub-RT"
            },
            "tags_all": {
              "Name": "dove-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a612fb3d8f360e7",
            "route_table_id": "rtb-043883711aba943a2",
            "subnet_id": "subnet-01a324ebf26e82c7a"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0293836cc2d6c9",
            "route_table_id": "rtb-043883711aba943a2",
            "subnet_id": "subnet-075b29243e50cb8c8"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac6f2b9699a3261f",
            "route_table_id": "rtb-043883711aba943a2",
            "subnet_id": "subnet-0c65134a902768b41"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:security-group/sg-094f0434de9cef387",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094f0434de9cef387",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-stack-sg",
            "name_prefix": "",
            "owner_id": "134524836832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:subnet/subnet-01a324ebf26e82c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a324ebf26e82c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134524836832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-1"
            },
            "tags_all": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:subnet/subnet-075b29243e50cb8c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075b29243e50cb8c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134524836832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-2"
            },
            "tags_all": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:subnet/subnet-0c65134a902768b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65134a902768b41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134524836832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-3"
            },
            "tags_all": {
              "Name": "dove-pub-3"
            },
            "vpc_id": "vpc-06a68b261b0f1809e"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:134524836832:vpc/vpc-06a68b261b0f1809e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1313f8a546d32ba",
            "default_route_table_id": "rtb-0f696bea0978120b3",
            "default_security_group_id": "sg-0e68bb4acf7e0f793",
            "dhcp_options_id": "dopt-211de64a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a68b261b0f1809e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f696bea0978120b3",
            "owner_id": "134524836832",
            "tags": {
              "Name": "Vdove"
            },
            "tags_all": {
              "Name": "Vdove"
            }
          }
        }
      ]
    }
  ]
}